k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-hello-world-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-hello-world-web
  template:
    metadata:
      labels:
        app: k8s-hello-world-web
    spec:
      containers:
      - name: k8s-hello-world-web
        image: leonrinkel/k8s-hello-world-web
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 250m
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 1
