k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-hello-world-web
spec:
  selector:
    app: k8s-hello-world-web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
