k8s/k8s-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-hello-world-web
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`leonrrrr.com`) && Path(`/`)
    kind: Rule
    services:
    - name: k8s-hello-world-web
      port: 5000
  tls:
    certResolver: myresolver
    domains:
    - main: leonrrrr.com
